style for index page

--- a/pa1/python/views/index.html
+++ b/pa1/python/views/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>INDEX</h1>
-    <p class="center">
-      Welcome!
-    </p>
+  <div class="jumbotron">
+    <h1>Welcome to The Great Album Wall!</h1>
+    <p>Please choose a user:</p>
+  </div>
 {% endblock %}
