--- a/pa1/python/static/css/style.css
+++ b/pa1/python/static/css/style.css
@@ -1,6 +1,23 @@
-
+body {
+	padding-top: 20px;
+}
 
 .center {
 	margin:0 auto;
-	max-width: 500px;
+	max-width: 1000px;
 }
+
+.footer {
+  padding-top: 19px;
+  color: #777;
+  border-top: 1px solid #e5e5e5;
+}
+
+/*@media screen and (min-width: 768px) {
+   
+  .header,
+  .footer {
+    padding-right: 0;
+    padding-left: 0;
+  }
+}*/
