--- a/pa1/python/views/index.html
+++ b/pa1/python/views/index.html
@@ -3,5 +3,8 @@
   <div class="jumbotron">
     <h1>Welcome to The Great Album Wall!</h1>
     <p>Please choose a user:</p>
+    {% for username in usernames %}
+        <li><a href="/albums?username={{username}}">{{ username }}</a></li>
+    {% endfor %}
   </div>
 {% endblock %}
