--- a/pa1/python/views/albums.html
+++ b/pa1/python/views/albums.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
   <h1>ALBUMS</h1>
-  <table style="width:100%">
+  <table class="table">
     <tr>
       <th>Album Name</th>
       {% if edit %}
@@ -12,7 +12,7 @@
 
     {% for album in albums %}
     <tr>
-      <td>{{album[1]}}</td>
+      <td><a href="{% if edit %}.{% endif %}./album?id={{album[0]}}">{{album[1]}}</a></td>
       {% if edit %}
       <td><a class="btn btn-default" href="../album/edit?id={{album[0]}}">Edit</a></td>
       <td>Delete</td>
