--- a/pa1/python/views/albums.html
+++ b/pa1/python/views/albums.html
@@ -15,13 +15,28 @@
       <td><a href="{% if edit %}.{% endif %}./album?id={{album[0]}}">{{album[1]}}</a></td>
       {% if edit %}
       <td><a class="btn btn-default" href="../album/edit?id={{album[0]}}">Edit</a></td>
-      <td>Delete</td>
+      <td>
+        <form action="./edit" method="POST" enctype="application/x-www-form-urlencoded">
+          <input type="text" name="op" value="delete" hidden></input>
+          <input type="number" name="albumid" value="{{album[0]}}" hidden></input>
+          <button class="btn btn-default" type="submit">Delete</input>
+        </form>
+      </td>
       {% endif %}
     </tr>
     {% endfor %}
+    {% if edit %}
+      <tr>
+        <td colspan="3">
+          <form action="./edit" method="POST" enctype="application/x-www-form-urlencoded">
+            <input type="text" name="op" value="add" hidden></input>
+            <input type="number" name="username" value="{{username}}" hidden></input>
+            NEW: <input type="text" name="title" placeholder="Input title of new album here"></input>
+            <button class="btn btn-default" type="submit">Add</button>
+          </form>
+        </td>
+      </tr>
+    {% endif %}
   </table>
-  {% if edit %}
-    <div> This is only on the edit page </div>
-  {% endif %}
 {% endblock %}
 
