add Edit button

--- a/pa1/python/views/albums.html
+++ b/pa1/python/views/albums.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
   <h1>ALBUMS</h1>
+
+  <a class="btn btn-default" href="./albums/edit?username={{username}}">Edit</a>
+
   <table class="table">
     <tr>
       <th>Album Name</th>
