--- a/pa1/python/views/albums.html
+++ b/pa1/python/views/albums.html
@@ -1,8 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
   <h1>ALBUMS</h1>
-
-  <a class="btn btn-default" href="./albums/edit?username={{username}}">Edit</a>
+  {% if not edit %}
+  <a class="btn btn-default" href="./albums/edit?username={{username}}">
+    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+  </a>
+  {% else %}
+  <a class="btn btn-default" href="../albums?username={{username}}">
+    <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+  </a>
+  {% endif %}
 
   <table class="table">
     <tr>
