--- a/pa1/python/views/albums.html
+++ b/pa1/python/views/albums.html
@@ -38,7 +38,7 @@
   </table>
   {% if edit %}
       <td colspan="3">
-        <form action="./edit" method="POST" enctype="application/x-www-form-urlencoded">
+        <form action="./edit?username={{username}}" method="POST" enctype="application/x-www-form-urlencoded">
           <input type="text" name="op" value="add" hidden></input>
           <input type="number" name="username" value="{{username}}" hidden></input>
           NEW: <input type="text" name="title" placeholder="Input title of new album here"></input>
