--- a/pa1/python/views/album.html
+++ b/pa1/python/views/album.html
@@ -1,10 +1,18 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>ALBUM</h1>
-    <p class="important">
-      Welcome!
-    </p>
-    {% if edit %}
-        <div> This is only on the edit page </div>
-    {% endif %}
+<div class="row">
+  <div class="col-lg-12">
+      <h1 class="page-header">{{albumName}}</h1>
+  </div>
+  {% for photo in photos %}
+  <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+      <a class="thumbnail" href="#">
+          <img class="img-responsive" src="{{photo[0]}}" alt="">
+      </a>
+  </div>
+  {% endfor %}
+</div>
+  {% if edit %}
+      <div> This is only on the edit page </div>
+  {% endif %}
 {% endblock %}
