--- a/pa1/python/static/css/style.css
+++ b/pa1/python/static/css/style.css
@@ -13,6 +13,9 @@ body {
   border-top: 1px solid #e5e5e5;
 }
 
+.thumbnail>img {
+  height: 300px;
+}
 /*@media screen and (min-width: 768px) {
    
   .header,
