--- a/pa1/python/views/album.html
+++ b/pa1/python/views/album.html
@@ -10,7 +10,7 @@ Editing Page
   {% for photo in photos %}
   <div class="col-lg-3 col-md-4 col-xs-6 thumb">
       <a class="thumbnail" href="./pic?id={{photo[0]}}">
-          <img class="img-responsive" src="{{photo[1]}}" alt="">
+          <img class="img-responsive" src="{{photo[1]}}" alt=""/>
       </a>
   </div>
   {% endfor %}
