--- a/pa1/python/views/pic.html
+++ b/pa1/python/views/pic.html
@@ -1,13 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="row">
-  <div class="col-lg-9">
-    <h1>PIC</h1>
+  <div class="col-xs-9">
   </div>
-  <div class="col-lg-3">
-    <a class="btn btn-default" href="./album?id={{albumid[0]}}" style="float:right">
-      Back to ablum
-    </a>
+  <div class="col-xs-3">
+    <h1><a class="btn btn-default" href="./album?id={{albumid[0]}}" >Back to ablum</a></h1>
   </div>
   <div>
     <p class="important">
