--- a/pa1/python/static/css/style.css
+++ b/pa1/python/static/css/style.css
@@ -16,6 +16,10 @@ body {
 .thumbnail>img {
   height: 300px;
 }
+
+.button-back {
+  float:right;
+}
 /*@media screen and (min-width: 768px) {
    
   .header,
