--- a/pa1/python/views/album.html
+++ b/pa1/python/views/album.html
@@ -4,9 +4,14 @@
 Editing Page
 {% else %}
 <div class="row">
-  <div class="col-lg-12">
-      <h1 class="page-header">{{albumName}}</h1>
+  <div class="col-xs-9">
+      <h1>{{albumname}}</h1>
   </div>
+  <div class="col-xs-3">
+    <h1><a class="btn btn-default button-back" href="./albums?username={{username}}">Back</a></h1>
+  </div>
+</div>
+<div class="row">
   {% for photo in photos %}
   <div class="col-lg-3 col-md-4 col-xs-6 thumb">
       <a class="thumbnail" href="./pic?id={{photo[0]}}">
