--- a/pa1/python/views/albums.html
+++ b/pa1/python/views/albums.html
@@ -1,16 +1,28 @@
 {% extends "base.html" %}
 {% block content %}
+<div class="col-xs-10">
   <h1>ALBUMS</h1>
-  {% if not edit %}
-  <a class="btn btn-default" href="./albums/edit?username={{username}}">
-    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-  </a>
-  {% else %}
-  <a class="btn btn-default" href="../albums?username={{username}}">
-    <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
-  </a>
-  {% endif %}
-
+</div>
+<div class="col-xs-1">
+  <h1>
+    {% if not edit %}
+    <a class="btn btn-default" href="./albums/edit?username={{username}}">
+      <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+    </a>
+    {% else %}
+    <a class="btn btn-default" href="../albums?username={{username}}">
+      <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+    </a>
+    {% endif %}
+  </h1>
+</div>
+<div class="col-xs-1">
+  <h1>
+    <a class="btn btn-default" href="../albums?username={{username}}">
+      back
+    </a>
+  </h1>
+</div>
   <table class="table">
     <tr>
       <th>Album Name</th>
