--- a/pa1/python/views/album.html
+++ b/pa1/python/views/album.html
@@ -1,24 +1,59 @@
 {% extends "base.html" %}
 {% block content %}
-{% if edit %}
-Editing Page
-{% else %}
 <div class="row">
-  <div class="col-xs-9">
+  <div class="col-xs-10">
       <h1>{{albumname}}</h1>
   </div>
-  <div class="col-xs-3">
-    <h1><a class="btn btn-default button-back" href="./albums?username={{username}}">Back</a></h1>
+  <div class="col-xs-1">
+    <h1>
+      {% if not edit %}
+      <a class="btn btn-default" href="./album/edit?id={{albumid}}">
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+      </a>
+      {% else %}
+      <a class="btn btn-default" href="../album?id={{albumid}}">
+        <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+      </a>
+      {% endif %}
+    </h1>
+  </div>
+  <div class="col-xs-1">
+    <h1>
+      {% if not edit %}
+      <a class="btn btn-default" href="{% if edit %}.{% endif %}./albums?username={{username}}">Back</a>
+      {% endif %}
+    </h1>
   </div>
 </div>
 <div class="row">
   {% for photo in photos %}
   <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-      <a class="thumbnail" href="./pic?id={{photo[0]}}">
-          <img class="img-responsive" src="{{photo[1]}}" alt=""/>
-      </a>
+      <div class="row">
+        <a class="thumbnail" href="./pic?id={{photo[0]}}">
+            <img class="img-responsive" src="{{photo[1]}}" alt=""/>
+        </a>
+      </div>
+      {% if edit %}
+      <div class="row">
+        <form action="" method="POST" enctype="application/x-www-form-urlencoded">
+          <input type="text" name="op" value="delete" hidden/>
+          <input type="text" name="photoid" value="{{photo[0]}}" hidden/>
+          <button type="submit" class="btn btn-danger">Delete</button>
+        </form>
+      </div>
+      {% endif %}
   </div>
   {% endfor %}
+</div>
+
+{% if edit %}
+<div class="row">
+  <form action="" method="Post" enctype="multipart/form-data">
+    <input type="text" name="op" value="add" hidden/>
+    <label for="file-upload">File input</label>
+    <input type="file" name="file" id="file-upload"/>
+    <input class="btn btn-success"type="submit" value="Upload"/>
+  </form>
 </div>
 {% endif %}
 {% endblock %}
