--- a/pa1/python/views/albums.html
+++ b/pa1/python/views/albums.html
@@ -1,30 +1,33 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="col-xs-10">
-  <h1>ALBUMS</h1>
+<div class="row">
+  <div class="col-xs-10">
+    <h1>ALBUMS</h1>
+  </div>
+  <div class="col-xs-1">
+    <h1>
+      {% if not edit %}
+      <a class="btn btn-default" href="./albums/edit?username={{username}}">
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+      </a>
+      {% else %}
+      <a class="btn btn-default" href="../albums?username={{username}}">
+        <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+      </a>
+      {% endif %}
+    </h1>
+  </div>
+  <div class="col-xs-1">
+    <h1>
+      {% if not edit %}
+      <a class="btn btn-default" href="./">
+        back
+      </a>
+      {% endif %}
+    </h1>
+  </div>
 </div>
-<div class="col-xs-1">
-  <h1>
-    {% if not edit %}
-    <a class="btn btn-default" href="./albums/edit?username={{username}}">
-      <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-    </a>
-    {% else %}
-    <a class="btn btn-default" href="../albums?username={{username}}">
-      <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
-    </a>
-    {% endif %}
-  </h1>
-</div>
-<div class="col-xs-1">
-  <h1>
-    {% if not edit %}
-    <a class="btn btn-default" href="./">
-      back
-    </a>
-    {% endif %}
-  </h1>
-</div>
+<div class="row">
   <table class="table">
     <tr>
       <th>Album Name</th>
@@ -40,7 +43,7 @@
       {% if edit %}
       <td><a class="btn btn-default" href="../album/edit?id={{album[0]}}">Edit</a></td>
       <td>
-        <form action="./edit?username={{username}}" method="POST" enctype="application/x-www-form-urlencoded">
+        <form action="" method="POST" enctype="application/x-www-form-urlencoded">
           <input type="text" name="op" value="delete" hidden></input>
           <input type="number" name="albumid" value="{{album[0]}}" hidden></input>
           <button class="btn btn-default" type="submit">Delete</input>
@@ -49,16 +52,17 @@
       {% endif %}
     </tr>
     {% endfor %}
+    {% if edit %}
+    <td colspan="3">
+      <form action="" method="POST" enctype="application/x-www-form-urlencoded">
+        <input type="text" name="op" value="add" hidden></input>
+        <input type="number" name="username" value="{{username}}" hidden></input>
+        NEW: <input type="text" name="title" placeholder="Input title of new album here"></input>
+        <button class="btn btn-default" type="submit">Add</button>
+      </form>
+    </td>    
+    {% endif %}
   </table>
-  {% if edit %}
-      <td colspan="3">
-        <form action="./edit?username={{username}}" method="POST" enctype="application/x-www-form-urlencoded">
-          <input type="text" name="op" value="add" hidden></input>
-          <input type="number" name="username" value="{{username}}" hidden></input>
-          NEW: <input type="text" name="title" placeholder="Input title of new album here"></input>
-          <button class="btn btn-default" type="submit">Add</button>
-        </form>
-      </td>    
-  {% endif %}
+</div>
 {% endblock %}
 
