--- a/pa1/python/views/pic.html
+++ b/pa1/python/views/pic.html
@@ -8,7 +8,7 @@
   </div>
   <div class="row">
     <div class="col-xs-12">
-        <img class="img-responsive" style="width:100%" src="{{url[0]}}" alt="">
+        <img class="img-responsive img-with-max-size" src="{{url[0]}}" alt="">
     </div>
   </div>
   <div class="row">
