--- a/pa1/python/views/albums.html
+++ b/pa1/python/views/albums.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="row">
-  <div class="col-xs-10">
+  <div class="col-xs-6 col-md-8 col-lg-10">
     <h1>ALBUMS</h1>
   </div>
-  <div class="col-xs-1">
+  <div class="col-xs-3 col-md-2 col-lg-1">
     <h1>
       {% if not edit %}
       <a class="btn btn-default" href="./albums/edit?username={{username}}">
@@ -17,7 +17,7 @@
       {% endif %}
     </h1>
   </div>
-  <div class="col-xs-1">
+  <div class="col-xs-3 col-md-2 col-lg-1">
     <h1>
       {% if not edit %}
       <a class="btn btn-default" href="./">
