hide about and contact us

--- a/pa1/python/views/base.html
+++ b/pa1/python/views/base.html
@@ -14,17 +14,17 @@
       <nav>
         <ul class="nav nav-pills pull-right">
           <li role="preseentation" class="active"><a href="/sksnf4gf1or/pa1/">Home</a></li>
-          <li role="presentation"><a href="">About</a></li>
-          <li role="presentation"><a href="">Contact</a></li>
+          <li role="presentation" class="hidden"><a href="">About</a></li>
+          <li role="presentation" class="hidden"><a href="">Contact</a></li>
         </ul>
       </nav>
-      <h3 class="text-muted">The Great Album Wall</h3>
+      <h3 class="text-muted"><a href="/sksnf4gf1or/pa1/">The Great Album Wall</a></h3>
     </div>
 
     {% block content %}{% endblock %}
   
     <footer class="footer">
-      <p>© J.H.P. Inc. 2015</p>
+      <p>© J.P.H. Inc. 2015</p>
     </footer>  
   </div>
 
