--- a/pa1/python/views/page_not_found.html
+++ b/pa1/python/views/page_not_found.html
@@ -2,5 +2,5 @@
 {% block content %}
 <h1>Poops, Page Not Found.</h1>
 <h2>But we found this.</h2>
-<img src="/static/img/chicken.jpg">
+<img src="https://upload.wikimedia.org/wikipedia/commons/f/f4/Poltava_chicken_breed_male2.jpg">
 {% endblock %}
