--- a/pa2/python/views/login.html
+++ b/pa2/python/views/login.html
@@ -2,8 +2,8 @@
 {% block content %}
   <div>
     <form method="POST" action"">
-      <input type = 'text' name='username'>
-      <input type = 'text' name='password'>
+       username: <input type = 'text' name='username'>
+       password: <input type = 'text' name='password'>
       <input type = 'submit' value ='Login'>
     </form>
   </div>
