--- a/pa2/python/views/index.html
+++ b/pa2/python/views/index.html
@@ -3,8 +3,9 @@
   <div class="jumbotron">
     <h1>Welcome to The Great Album Wall!</h1>
     <p>Member? Please login <a href='/sksnf4gf1or/pa2/login?url={{request.url}}'> here </a></p>
-    <p>New user? Join us <a herf=''>here</a>!</p>
+    <p>New user? Join us <a href='./user'>here</a>!</p>
 
+    <p>Public albums:<p>
     <!-- {% for username in usernames %}
         <li><a href="./albums?username={{username[0]}}">{{ username[0] }}</a></li>
     {% endfor %} -->
