--- a/pa2/python/views/index.html
+++ b/pa2/python/views/index.html
@@ -5,9 +5,9 @@
     <p>Member? Please login <a href='/sksnf4gf1or/pa2/login?url={{request.url}}'> here </a></p>
     <p>New user? Join us <a href='./user'>here</a>!</p>
 
-    <p>Public albums:<p>
-    <!-- {% for username in usernames %}
-        <li><a href="./albums?username={{username[0]}}">{{ username[0] }}</a></li>
-    {% endfor %} -->
+    <p>Albums:<p>
+    {% for album in albums %}
+        <li><a href="./album?id={{album[0]}}">{{ album[1] }}</a></li>
+    {% endfor %}
   </div>
 {% endblock %}
