--- a/pa2/python/views/base.html
+++ b/pa2/python/views/base.html
@@ -15,7 +15,7 @@
         <ul class="nav nav-pills pull-right">
           <li role="preseentation" class="active"><a href="/sksnf4gf1or/pa2/">Home</a></li>
           {% if hasLoginButton %}
-          <li role="presentation" class="active"><a href='/sksnf4gf1or/pa2/login?url={{request.url}}'>login</a></li>
+          <li role="presentation" class="active"><a href='/sksnf4gf1or/pa2/user/login?url={{request.url}}'>login</a></li>
           {% endif %}
           {% if hasLogoutButton %}
           <li role="presentation" class="active"><a href='logout'>logout</a></li>
