--- a/pa2/python/views/login.html
+++ b/pa2/python/views/login.html
@@ -1,9 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
   <div>
+    {% if error %}
+      <p class=error><strong>Error:</strong> {{ error }}
+    {% endif %}
     <form method="POST" action"">
        username: <input type = 'text' name='username'>
-       password: <input type = 'text' name='password'>
+       password: <input type = 'password' name='password'>
       <input type = 'submit' value ='Login'>
     </form>
   </div>
