--- a/pa2/python/views/index.html
+++ b/pa2/python/views/index.html
@@ -2,9 +2,12 @@
 {% block content %}
   <div class="jumbotron">
     <h1>Welcome to The Great Album Wall!</h1>
+    {% if username %}
+    <p>Hello, {{username}}</p>
+    {% else %}
     <p>Member? Please login <a href='/sksnf4gf1or/pa2/login?url={{request.url}}'> here </a></p>
     <p>New user? Join us <a href='./user'>here</a>!</p>
-
+    {% endif %}
     <p>Albums:<p>
     {% for album in albums %}
         <li><a href="./album?id={{album[0]}}">{{ album[1] }}</a></li>
