login user error checking

--- a/pa2/python/views/index.html
+++ b/pa2/python/views/index.html
@@ -5,7 +5,7 @@
     {% if username %}
     <p>Hello, {{username}}</p>
     {% else %}
-    <p>Member? Please login <a href='/sksnf4gf1or/pa2/login?url={{request.url}}'> here </a></p>
+    <p>Member? Please login <a href='/sksnf4gf1or/pa2/user/login?url={{request.url}}'> here </a></p>
     <p>New user? Join us <a href='./user'>here</a>!</p>
     {% endif %}
     <p>Albums:<p>
