--- a/pa2/python/views/user.html
+++ b/pa2/python/views/user.html
@@ -2,6 +2,9 @@
 {% block content %}
 
 <div>
+  {% if error %}
+    <p class=error><strong>Error:</strong> {{ error }}
+  {% endif %}
   <form method="POST" action"">
     username: <input type = 'text' name='username'>
     password: <input type = 'password' name='password'>
