--- a/pa2/python/views/albums.html
+++ b/pa2/python/views/albums.html
@@ -7,11 +7,11 @@
   <div class="col-xs-3 col-md-2 col-lg-1">
     <h1>
       {% if not edit %}
-      <a class="btn btn-default" href="./albums/edit?username={{username}}">
+      <a class="btn btn-default" href="./albums/edit">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
       </a>
       {% else %}
-      <a class="btn btn-default" href="../albums?username={{username}}">
+      <a class="btn btn-default" href="../albums">
         <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
       </a>
       {% endif %}
