--- a/pa2/python/views/noAccess.html
+++ b/pa2/python/views/noAccess.html
@@ -1,4 +1,4 @@
 {% extends "base.html" %}
 {% block content %}
-<p>Sorry, this page can only be viewed by authorized user. Please ask the owner of this page for authorization.</p>
+<p>Sorry, this page can only be viewed by authorized user.</p>
 {% endblock %}
