--- a/pa2/python/views/user.html
+++ b/pa2/python/views/user.html
@@ -1,11 +1,56 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div>
-  {% if error %}
-    <p class=error><strong>Error:</strong> {{ error }}
-  {% endif %}
-  <form method="POST" action"">
+<div class="panel panel-warning">
+  <div class = "panel-heading">
+    <h3><center>Register</center></h3>
+  </div>
+  <div class="panel-body">
+
+
+    {% if error %}
+      <p class=error><strong>Error:</strong> {{ error }}
+    {% endif %}
+
+    <form role="form" method ="POST">
+      <div class="form-group">
+        <label for="username">Username:</label>
+        <input pattern="[A-Za-z0-9_]{3,20}" required title="3 characters at least and can only have letters, digits, and underscores" type="text" class="form-control" name="username" id ="username">
+      </div>
+      <div class="form-group">
+        <label for="pwd">Password:</label>
+        <input pattern="^(?=.*\d)(?=.*[a-zA-Z])[A-Za-z0-9_]{5,15}" required title="5-15 leng, at least one letter and one digit, only letters, digits, and underscore" type="password" class="form-control" name="password" id="pwd">
+      </div>
+
+      <div class="form-group">
+        <label for="re-pwd">re-type password:</label>
+        <input type="password" class="form-control" name="re-password" id="re-pwd">
+      </div>
+
+      <div class="form-group">
+        <label for="firstname">Firstname:</label>
+        <input pattern=".{1,20}" required title="at most 20 char" type="text" class="form-control" name="firstname" id="firstname">
+      </div>
+
+      <div class="form-group">
+        <label for="lastname">Lastname:</label>
+        <input pattern=".{1,20}" required title="at most 20 char" type="text" class="form-control" name="lastname" id ="lastname">
+      </div>
+
+      <div class="form-group">
+        <label for="email">Email:</label>
+        <input maxlength="40" required title="at most 40 char" type="email" class="form-control" name="email" id ="email">
+      </div>
+
+      <center><button type="submit" class="btn btn-default">Register</button></center>
+    </form>
+
+  </div>
+</div>
+
+
+
+  <!-- <form method="POST" action"">
     username: <input type = 'text' name='username'>
     password: <input type = 'password' name='password'>
     re-type password: <input type = 'password' name='re-password'>
@@ -13,7 +58,7 @@
     lastname: <input type = 'text' name='lastname'>
     email: <input type = 'email' name='email'>
     <input type = 'submit' value ='register'>
-  </form>
+  </form> -->
 </div>
 
 {% endblock %}
