front end of user/edit

--- a/pa2/python/views/base.html
+++ b/pa2/python/views/base.html
@@ -16,6 +16,7 @@
           <li role="preseentation" class="active"><a href="/sksnf4gf1or/pa2/">Home</a></li>
           {% if login %}
           <li role="presentation" class="active"><a href='/sksnf4gf1or/pa2/albums'>My Albums</a></li>
+          <li role="presentation" class="active"><a href='/sksnf4gf1or/pa2/user/edit'>Edit Profile</a></li>
           {% else %}
           <li role="presentation" class="active"><a href='/sksnf4gf1or/pa2/albums'>Public Albums</a></li>
           {% endif %}
