--- a/pa2/python/views/albums.html
+++ b/pa2/python/views/albums.html
@@ -6,11 +6,11 @@
   </div>
   <div class="col-xs-3 col-md-2 col-lg-1">
     <h1>
-      {% if not edit %}
+      {% if not edit and username %}
       <a class="btn btn-default" href="./albums/edit">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
       </a>
-      {% else %}
+      {% elif username %}
       <a class="btn btn-default" href="../albums">
         <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
       </a>
@@ -32,6 +32,7 @@
     <tr>
       <th>Album Name</th>
       {% if edit %}
+      <th>Access</th>
       <th>Edit</th>
       <th>Delete</th>
       {% endif %}
@@ -41,6 +42,7 @@
     <tr>
       <td><a href="{% if edit %}.{% endif %}./album?id={{album[0]}}">{{album[1]}}</a></td>
       {% if edit %}
+      <td>{{album[5]}}</td>
       <td><a class="btn btn-default" href="../album/edit?id={{album[0]}}">Edit</a></td>
       <td>
         <form action="" method="POST" enctype="application/x-www-form-urlencoded">
