--- a/pa2/python/views/login.html
+++ b/pa2/python/views/login.html
@@ -20,6 +20,9 @@
         <label for="pwd">Password:</label>
         <input type="password" class="form-control" name="password" id="pwd">
       </div>
+      <div class="form-group">
+        <a href="./forget">Forget password?</a>
+      </div>
 
       <center><button type="submit" class="btn btn-default">Submit</button></center>
     </form>
