--- a/pa2/python/views/albums.html
+++ b/pa2/python/views/albums.html
@@ -42,6 +42,7 @@
     <tr>
       <td><a href="{% if edit %}.{% endif %}./album?id={{album[0]}}">{{album[1]}}</a></td>
       {% if edit %}
+      <td>{{album[5]}}</td>
       <td><a class="btn btn-default" href="../album/edit?id={{album[0]}}">Edit</a></td>
       <td>
         <form action="" method="POST" enctype="application/x-www-form-urlencoded">
