--- a/pa2/python/views/login.html
+++ b/pa2/python/views/login.html
@@ -1,8 +1,18 @@
 {% extends "base.html" %}
 {% block content %}
+<style>
+.panel-info {
+  opacity: 0.9;
+  margin-top:30px;
+  width: 30%;
+  margin-left: auto;
+  margin-right: auto;
+}
+</style>
+
 <div class="panel panel-info">
   <div class = "panel-heading">
-    <h3><center>Login</center></h3>
+    <h3>Login</h3>
   </div>
   <div class="panel-body">
 
@@ -23,6 +33,10 @@
       <div class="form-group">
         <a href="./forget">Forget password?</a>
       </div>
+      <div class="form-group">
+        <a href="../user">Register?</a>
+      </div>
+
 
       <center><button type="submit" class="btn btn-default">Submit</button></center>
     </form>
