--- a/pa2/python/views/album.html
+++ b/pa2/python/views/album.html
@@ -23,7 +23,11 @@
   <div class="col-xs-3 col-md-2 col-lg-1">
     <h1>
       {% if not edit %}
-      <a class="btn btn-default" href="{% if edit %}.{% endif %}./albums?username={{username}}">Back</a>
+      {% if login %}
+      <a class="btn btn-default" href="{% if edit %}.{% endif %}./albums">Back To My Albums</a>
+      {% else %}
+      <a class="btn btn-default" href="{% if edit %}.{% endif %}./albums">Back To Public Albums</a>
+      {% endif %}
       {% endif %}
     </h1>
   </div>
