--- a/pa2/python/views/pic.html
+++ b/pa2/python/views/pic.html
@@ -13,11 +13,15 @@
   </div>
   <div class="row">
     <div class="col-xs-12">
+      {% if owner %}
       <form action="" method="POST">
         <label for="pwd">Caption:</label>
         <input type="text" class="form-control" name="caption" value="{{caption}}">
         <button type="submit" class="btn btn-default">Save</button>
       </form>
+      {% else %}
+      <p><b>Caption: </b>{{caption}}</p>
+      {% endif %}
     </div>
   </div>
   <div class="row">
