--- a/pa3/python/views/base.html
+++ b/pa3/python/views/base.html
@@ -17,25 +17,25 @@
     <div class="header clearfix">
       <nav>
         <ul class="nav nav-pills pull-right">
-          <li role="preseentation" class="active"><a href="/sksnf4gf1or/pa2/">Home</a></li>
+          <li class="active"><a href="/sksnf4gf1or/pa2/">Home</a></li>
           {% if login %}
-          <li role="presentation" class="active"><a href='/sksnf4gf1or/pa2/albums'>My Albums</a></li>
-          <li role="presentation" class="active"><a href='/sksnf4gf1or/pa2/user/edit'>Edit Profile</a></li>
+          <li class="active"><a href='/sksnf4gf1or/pa2/albums'>My Albums</a></li>
+          <li class="active"><a href='/sksnf4gf1or/pa2/user/edit'>Edit Profile</a></li>
           {% else %}
-          <li role="presentation" class="active"><a href='/sksnf4gf1or/pa2/albums'>Public Albums</a></li>
+          <li class="active"><a href='/sksnf4gf1or/pa2/albums'>Public Albums</a></li>
           {% endif %}
           {% if not hideLogin and not login %}
-          <li role="presentation" class="active"><a href='/sksnf4gf1or/pa2/user/login?url={{request.url}}'>Login</a></li>
+          <li class="active"><a href='/sksnf4gf1or/pa2/user/login?url={{request.url}}'>Login</a></li>
           {% endif %}
           {% if login %}
-          <li role="presentation" class="active"><a href='/sksnf4gf1or/pa2/user/logout'>Logout</a></li>
+          <li class="active"><a href='/sksnf4gf1or/pa2/user/logout'>Logout</a></li>
           {% endif %}
         </ul>
       </nav>
       <h3 class="text-muted"><a href="/sksnf4gf1or/pa2/">The Great Album Wall</a></h3>
     </div>
 
-    {% block content %}{% block extrascripts %}{% endblock %}
+    {% block content %}{% block extrascripts %}{% endblock %}{% endblock %}
 
     <footer class="footer">
       <p>© J.P.H. Inc. 2015</p>
