--- a/pa3/python/views/pic.html
+++ b/pa3/python/views/pic.html
@@ -13,15 +13,10 @@
   </div>
   <div class="row">
     <div class="col-xs-12">
-      {% if owner %}
-      <form action="" method="POST">
+      <div>
         <label for="pwd">Caption:</label>
         <input id="caption" type="text" class="form-control" name="caption" value="{{caption}}">
-        <button type="submit" class="btn btn-default">Save</button>
-      </form>
-      {% else %}
-      <p><b>Caption: </b>{{caption}}</p>
-      {% endif %}
+      </div>
     </div>
   </div>
   <div class="row">
