--- a/pa3/python/views/pic.html
+++ b/pa3/python/views/pic.html
@@ -1,7 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="row">
-  <div class="col-xs-9">
+  <div class="col-xs-3">
+    <h3>Favorites: <span id="numFavorites"></span></h3>
+  </div>
+  <div class="col-xs-2">
+    <button id="">
+  </div>
+  <div class="col-xs-4">
   </div>
   <div class="col-xs-3">
     <h1><a class="btn btn-default" href="./album?id={{albumid[0]}}" >Back to album</a></h1>
