fix typo in pic.html and favorites.js

--- a/pa3/python/views/pic.html
+++ b/pa3/python/views/pic.html
@@ -6,7 +6,7 @@
     <p>Favorites: <span id="num-favorites"></span></p>
   </div>
   <div class="col-xs-2">
-    <p>Latest favorite user: <span id="latest-user"></span></p>
+    <p>Latest favorite user: <span id="user-favorites"></span></p>
   </div>
   <div class="col-xs-2">
     <button class="btn btn-default" id="favorite-button"><span class="glyphicon glyphicon-heart"
