--- a/pa3/python/views/base.html
+++ b/pa3/python/views/base.html
@@ -4,6 +4,7 @@
 
   <script type="text/javascript" src="/static/js/qwest.min.js"></script>
   <script type="text/javascript" src="/static/js/caption.js"></script>
+  <script type="text/javascript" src="/static/js/favorites.js"></script>
   <link rel="stylesheet" href="/static/css/bootstrap-theme.min.css" />
   <link rel="stylesheet" href="/static/css/bootstrap.min.css" />
   <link rel="stylesheet" href="/static/css/style.css" />
